<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Febers 2018.
  ~ Copyright (c). All rights reserved.
  ~
  ~ Last Modified 18-6-6 下午10:53
  ~
  -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/myBackgroundColorSecond">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_about"
            app:title="关于"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
            app:layout_scrollFlags="enterAlways"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/about_margin"
            android:orientation="vertical"
            android:background="?attr/myBackgroundColor">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:clickable="true">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ginkgo_blue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="25dp"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/item_view_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liv_title="@string/app_version"
                app:liv_subtitle="检查更新"
                app:liv_icon="@drawable/ic_about_about_black"
                app:liv_displayMode="icon"
                android:clickable="true"/>
            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/item_view_web_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liv_title="主页"
                app:liv_icon="@drawable/ic_classroom_black"
                app:liv_subtitle="@string/app_web"
                android:clickable="true"
                app:liv_displayMode="icon" />

            <include layout="@layout/layout_divide_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="开发者"
                android:textSize="12dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:clickable="true"/>
            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/item_view_developer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:liv_title="@string/developer_name"
                app:liv_subtitle="UESTC"
                app:liv_icon="@drawable/ic_person_black_24dp"
                app:liv_displayMode="icon"
                android:clickable="true"/>
            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/item_view_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:liv_title="Email"
                app:liv_subtitle="@string/developer_email"
                app:liv_icon="@drawable/ic_email_black_24dp"
                app:liv_displayMode="icon"
                android:clickable="true"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>